<resources>
    <string name="app_name">ayberkogram</string>
    <string name="username">Kullanıcı Adı</string>
    <string name="password">Şifre</string>
    <string name="login">Giriş Yap</string>
    <string name="forgot_passwd">Şifremi Unuttum</string>
    <string name="sign_up">Kayıt Ol</string>
    <string name="name">İsim</string>
    <string name="surname">Soyisim</string>
    <string name="dob">Doğum Tarihi</string>
    <string name="phone_number">Telefon Numarası</string>
    <string name="email">E-Mail</string>
    <string name="save">Kaydet</string>
</resources>